--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@fortawesome/react-fontawesome": "^0.1.2",
     "autoprefixer-loader": "^3.2.0",
     "css-loader": "^1.0.0",
-    "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -20,5 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "less": "^3.8.1"
   }
 }
