--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.3",
     "style-loader": "^0.23.0"
   },
   "scripts": {
@@ -28,5 +29,11 @@
   },
   "devDependencies": {
     "less": "^3.8.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
